# GPT-SoVITS_sillytavern_adapter

./: .gitignore  CHANGELOG.md  README.md  adapter.py  config.py  pluginManager.py  pyproject.toml  requirements.txt
plugins/clean_text/: __init__.py  cleaner.py
plugins/translate/: __init__.py  translate.py
